--- a/mmb_repo/templates/pages/home.html
+++ b/mmb_repo/templates/pages/home.html
@@ -31,9 +31,9 @@
                       </a>
                     </div>
                     <div class="bottom padder m-b-sm">
-                      <a href="#" class="pull-right active" data-toggle="class">
-                        <i class="fa fa-heart-o text"></i>
-                        <i class="fa fa-heart text-active text-danger"></i>
+                      <a href="#" class="pull-right active">
+                        <i class="fa fa-heart-o"></i>
+{#                        <i class="fa fa-heart text-active text-danger"></i>#}
                       </a>
                       <a href="#" data-toggle="class">
                         <i class="fa fa-plus-circle text"></i>
